[package]
name = "market-data"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "market_data"

[workspace]

[dependencies]
wit-bindgen = "0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
