[package]
name = "pricing-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "pricing_router"

[workspace]

[dependencies]
wit-bindgen = "0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
